--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         }
         
         .mobile-menu .nav-links {
+            display: flex;
             flex-direction: column;
             align-items: center;
         }
@@ -778,6 +779,12 @@
         }
         
         @media (max-width: 576px) {
+            .hero-content h1 {
+                font-size: 2rem;
+                word-break: break-word;
+                padding: 0 10px;
+                line-height: 1.2;
+            }
             /* Hero Section */
             .hero-content h1 {
                 font-size: 2.8rem;
