--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                         <i class="fas fa-tachometer-alt"></i>
                     </div>
                     <h3>Çift Mod Desteği</h3>
-                    <p>İster organik ve güvenli hit alın, ister agresif mod ile maksimum hızda ziyaretçi akışı sağlayın. Her sektöre uygun iki farklı çalışma modu.</p>
+                    <p>İster yavaş mod ile organik ve güvenli hit alın, ister hızlı mod ile maksimum hızda ziyaretçi akışı sağlayın. Her sektöre uygun iki farklı çalışma modu.</p>
                 </div>
 
                 <div class="feature-card">
