--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                 
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h4>Yazılım dışında ek bir ücret öder miyim?</h4>
+                        <h4>Ek bir ücret öder miyim?</h4>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
