--- a/index.html
+++ b/index.html
@@ -833,7 +833,9 @@
 </head>
 <body>
     <div id="particles-js"></div>
-    
+    <script async src="https://cse.google.com/cse.js?cx=d16bcbb0d4b704291">
+</script>
+<div class="gcse-search"></div>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
