--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">TREND<span>TOPIK</span></a>
+            <a href="https://trendtopik.com" class="logo">TREND<span>TOPIK</span></a>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
