--- a/index.html
+++ b/index.html
@@ -882,6 +882,7 @@
                 <div class="hero-btns">
                     <a href="#pricing" class="btn">Hemen Başla</a>
                     <a href="#features" class="btn btn-outline">Özellikleri Keşfet</a>
+                    <a href="demo.html" class="btn" style="background:#fff;color:#000;font-weight:600;">Demo Panele Giriş</a>
                 </div>
             </div>
         </div>
