--- a/demo.html
+++ b/demo.html
@@ -220,7 +220,7 @@ th {
 <div id="content">
   <header>
     Trendtopik Hit Panel
-    <a href="https://trendtopik.com" class="buy-button" target="_blank">Satın Al</a>
+    <a href="https://trendtopik.com/#pricing" class="buy-button" target="_blank">Satın Al</a>
   </header>
   <nav>
     <a href="#" id="dashboardBtn">Dashboard</a>
