--- a/demo.html
+++ b/demo.html
@@ -224,7 +224,7 @@ th {
   </header>
   <nav>
     <a href="#" id="dashboardBtn">Dashboard</a>
-    <a href="#" id="urlEkleBtn" class="active">URL Ekle</a>
+    <a href="#" id="urlEkleBtn" class="active">Hit panel</a>
   </nav>
   <main>
     <section id="dashboardPanel" style="display: none;">
