--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%23d90429'/><text x='50%' y='60%' dominant-baseline='middle' text-anchor='middle' font-size='50' fill='%23fff'>⚙️</text></svg>">
 <title>Trendtopik Hit Panel</title>
 <style>
 body, html {
