--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <h2>Sıkça Sorulan Sorular (SSS)</h2>
     <div class="faq-item">
       <h3>Bot kullanımı güvenli mi?</h3>
-      <p>Evet, ProTraffic Bot gelişmiş insan davranışı simülasyonları ve anti-detection teknikleri kullanır.</p>
+      <p>Evet, Trendtopik Bot gelişmiş insan davranışı simülasyonları ve anti-detection teknikleri kullanır.</p>
     </div>
     <div class="faq-item">
       <h3>Google tarafından banlanır mıyım?</h3>
