--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Trendtopik | Trafik Çözümleri Gerçek Trafik Botlarıyla SEO’da Zirve</title>
 
   <!-- SEO META ETİKETLERİ -->
@@ -25,7 +26,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Trendtopik | Trafik Çözümleri Gerçek Trafik Botlarıyla SEO’da Zirve">
   <meta name="twitter:description" content="Web sitenize doğal SEO uyumlu trafik artışı sağlayan en gelişmiş bot.">
-
+  
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
