--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
   <section id="iletisim" class="hero" data-aos="zoom-in">
     <h2>İletişime Geçin</h2>
     <p>Detaylı bilgi ve fiyat teklifleri için bize ulaşın!</p>
-    <a href="https://t.me/Bs3421" class="btn">İletişime geç</a>
+    <a href="https://t.me/trendtopiktr" class="btn">İletişime geç</a>
   </section>
 </div>
 
