--- a/index.html
+++ b/index.html
@@ -14,11 +14,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Trendtopik | Trafik Çözümleri Gerçek Trafik Botlarıyla SEO’da Zirve</title>
+  <!-- ORGANIZATION SCHEMA -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Trendtopik",
+  "url": "https://trendtopik.com/",
+  "logo": "https://trendtopik.com/og-image.jpg",
+  "sameAs": [
+    "https://t.me/trendtopiktr"
+  ]
+}
+</script>
+
+<!-- WEBSITE SCHEMA (Sitelinks Searchbox için) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://trendtopik.com/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://trendtopik.com/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+<!-- FAQ PAGE SCHEMA -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Bot kullanımı güvenli mi?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Evet, Trendtopik Bot gelişmiş insan davranışı simülasyonları ve anti-detection teknikleri kullanır."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Google tarafından banlanır mıyım?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Hayır, doğal kullanıcı davranışı taklidi yaptığı için ban riski minimumdur."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Nasıl satın alabilirim?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Satın al butonuna tıklayıp bizimle iletişime geçebilirsiniz. Kurulum desteği sağlıyoruz."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Lisans süresi var mı?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Hayır, aldığınız lisans süresizdir."
+      }
+    }
+  ]
+}
+</script>
 
   <!-- SEO META ETİKETLERİ -->
-  <meta name="description" content="Trendtopik ile web sitenize gerçekçi trafik artışı sağlayın. SEO sıralamalarınızı yükseltin.">
+  <meta name="description" content="Sitenize doğal görünümlü, kaliteli trafik çekin. SEO gücünüzü artırmak, görünürlük sağlamak ve potansiyel müşteri kitlenizi büyütmek için Trendtopik çözümlerinden hemen yararlanın!">
   <meta name="keywords" content="trafik bot, organik trafik, ziyaretçi botu, SEO hizmeti, web site trafiği, dijital pazarlama, dijital reklam, görünürlük artırma, siteye ziyaretçi çekme, bot trafik, analiz botu, hit bot, hit arttırma, kullanıcı simülasyonu, SEO botu, web trafiği yükseltme, online trafik hizmeti, reklam çözümleri, internet reklamı, dijital büyüme, SEO optimizasyon, web performans, trafik yazılımı, bot sistemleri, arama motoru optimizasyonu, SEO aracı, internet pazarlaması, backlink hizmeti, dijital strateji, reklam teknolojisi, online pazarlama araçları, arama sonuçları yükseltme, hızlı indeks alma, tıklama artırma, CTR yükseltme, trafik kaynağı, ziyaretçi kaynağı, web site görünürlüğü, algoritma dostu trafik, yazılım destekli trafik, web site popülerliği, reklam bot sistemi, SEO analiz, SEO raporu, bot destekli trafik, dijital dönüşüm, online etkileşim, pazarlama teknolojisi, reklam botları, trafiği artırma yolları, web siteye hit çekme">
-  <meta property="og:title" content="Trendtopik | SEO Trafik Arttırıcı">
+  <meta property="og:title" content="Trendtopik | Trafik Sistemi Gerçek Botlar ile SEO’da Üst Sıralara Çıkın">
   <meta property="og:description" content="Web sitenize gerçek kullanıcı davranışı simülasyonu ile doğal trafik artışı sağlayın.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://trendtopik.com/">
