--- a/about-us.html
+++ b/about-us.html
@@ -166,46 +166,52 @@ function sendMessageToTelegram() {
 
   <body>
     
-    <!-- Start Header Section -->
-    <header class="cs_site_header cs_style_1 cs_type_1 cs_sticky_header">
-      <div class="cs_main_header cs_white_color cs_semibold">
-        <div class="container-fluid">
-          <div class="cs_main_header_in">
-            <div class="cs_main_header_left">
-              <a class="cs_site_branding" href="index.html" aria-label="Logo link">
-              <img src="assets/img/logo_3.svg" alt="Logo">
-              </a>
-            </div>
-            <div class="cs_main_header_center">
-              <div class="cs_nav">
-                <ul class="cs_nav_list">
-                  <li class="menu-item-has-children">
-                    <a href="index.html" aria-label="Menu link">Anasayfa</a>
-                  </li>
-                  <li><a href="about-us.html" aria-label="Menu link">Hakkımızda +</a></li>
-                  <li class="menu-item-has-children">
-                    <a href="pricing.html" aria-label="Menu link">Hizmetler</a>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="faqs.html" aria-label="Menu link">SSS</a>
-                  <li><a href="contact.html" aria-label="Menu link">Bize Ulaşın</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="cs_main_header_right">
-              <button aria-label="Side header open button" class="cs_open_sideheader cs_blue_color border-0 bg-transparent">
-                <svg width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0.328003 6.66667H16.828V9.33333H0.328003V6.66667ZM0.328003 0H22.328V2.66667H0.328003V0ZM0.328003 16H10.2761V13.3333H0.328003V16Z" fill="currentColor"/>
-                </svg>
-              </button>
-              <a href="contact.html" aria-label="Menu link" class="cs_btn cs_style_1 cs_blue_bg cs_fs_14 text-uppercase">
-              <span>Iletışım</span>
-              </a>
-            </div>
+<!-- Start Header Section -->
+<header class="cs_site_header cs_style_1 cs_type_1 cs_sticky_header">
+  <div class="cs_main_header cs_white_color cs_semibold">
+    <div class="container-fluid">
+      <div class="cs_main_header_in">
+        <div class="cs_main_header_left">
+          <a class="cs_site_branding" href="index.html" aria-label="Logo link">
+            <img src="assets/img/logo_3.svg" alt="Logo">
+          </a>
+        </div>
+        <div class="cs_main_header_center">
+          <div class="cs_nav">
+            <ul class="cs_nav_list">
+              <li>
+                <a href="index.html" aria-label="Menu link">Anasayfa</a>
+              </li>
+              <li>
+                <a href="about-us.html" aria-label="Menu link">Hakkımızda</a>
+              </li>
+              <li>
+                <a href="pricing.html" aria-label="Menu link">Hizmetler</a>
+              </li>
+              <li>
+                <a href="faqs.html" aria-label="Menu link">SSS</a>
+              </li>
+              <li>
+                <a href="contact.html" aria-label="Menu link">Bize Ulaşın</a>
+              </li>
+            </ul>
           </div>
         </div>
+        <div class="cs_main_header_right">
+          <button aria-label="Side header open button" class="cs_open_sideheader cs_blue_color border-0 bg-transparent">
+            <svg width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.328003 6.66667H16.828V9.33333H0.328003V6.66667ZM0.328003 0H22.328V2.66667H0.328003V0ZM0.328003 16H10.2761V13.3333H0.328003V16Z" fill="currentColor"/>
+            </svg>
+          </button>
+          <a href="contact.html" aria-label="Menu link" class="cs_btn cs_style_1 cs_blue_bg cs_fs_14 text-uppercase">
+            <span>İletişim</span>
+          </a>
+        </div>
       </div>
-    </header>
+    </div>
+  </div>
+</header>
+
 <!-- Sidebar Header -->
 <div class="cs_side_header">
   <button class="cs_close"></button>
@@ -235,8 +241,8 @@ function sendMessageToTelegram() {
               <img src="assets/img/icons/head_phone.svg" alt="Telefon ikonu">
             </span>
             <div class="cs_iconbox_info">
-              <p class="cs_mb_1">Telefonla Destek</p>
-              <a href="tel:+905551112233" aria-label="Telefon numarasını ara">+90 (555) 111 22 33</a>
+              <p class="cs_mb_1">Telegram Destek</p>
+              <a href="https://t.me/trendtopiktr" aria-label="Telefon numarasını ara">Telegram</a>
             </div>
           </div>
         </li>
