--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ function sendMessageToTelegram() {
   
 <!-- Start Header Section -->
 <header class="cs_site_header cs_style_1 cs_type_1 cs_sticky_header">
-  <div class="cs_main_header cs_white_color cs_semibold">
+  <div class="cs_main_header cs_white_color cs_semibold" style="background-color: rgb(180, 180, 180);">
     <div class="container-fluid">
       <div class="cs_main_header_in">
         <div class="cs_main_header_left">
@@ -182,12 +182,22 @@ function sendMessageToTelegram() {
         </div>
         <div class="cs_main_header_center">
           <div class="cs_nav">
-            <ul class="cs_nav_list" style="list-style: none; margin: 0; padding: 0;">
-              <li><a href="index.html" aria-label="Menu link" style="color: #000;">Anasayfa</a></li>
-              <li><a href="about-us.html" aria-label="Menu link" style="color: #000;">Hakkımızda</a></li>
-              <li><a href="pricing.html" aria-label="Menu link" style="color: #000;">Hizmetler</a></li>
-              <li><a href="faqs.html" aria-label="Menu link" style="color: #000;">SSS</a></li>
-              <li><a href="contact.html" aria-label="Menu link" style="color: #000;">Bize Ulaşın</a></li>
+            <ul class="cs_nav_list">
+              <li>
+                <a href="index.html" aria-label="Menu link">Anasayfa</a>
+              </li>
+              <li>
+                <a href="about-us.html" aria-label="Menu link">Hakkımızda</a>
+              </li>
+              <li>
+                <a href="pricing.html" aria-label="Menu link">Hizmetler</a>
+              </li>
+              <li>
+                <a href="faqs.html" aria-label="Menu link">SSS</a>
+              </li>
+              <li>
+                <a href="contact.html" aria-label="Menu link">Bize Ulaşın</a>
+              </li>
             </ul>
           </div>
         </div>
