--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
   <!-- Open Graph (Facebook, LinkedIn vb. için) -->
   <meta property="og:title" content="İletişim | TrendTopik Trafik Bot & SEO Hizmetleri">
   <meta property="og:description" content="Web trafiği, SEO ve bot çözümleri hakkında sorularınız için TrendTopik ile iletişime geçin. Hızlı ve etkili çözümler.">
-  <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
-  <meta property="og:url" content="https://trendtopik.com/contact.html">
+  <meta property="og:image" content="assets/img/og-image.jpg">
+  <meta property="og:url" content="contact.html">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="İletişim | TrendTopik Trafik Bot & SEO Hizmetleri">
   <meta name="twitter:description" content="Hemen bizimle iletişime geçin. Trafik botu ve SEO hizmetlerimiz hakkında her şeyi öğrenin.">
-  <meta name="twitter:image" content="https://trendtopik.com/assets/img/og-image.jpg">
+  <meta name="twitter:image" content="assets/img/og-image.jpg">
 
   <!-- Favicon -->
   <link rel="icon" href="assets/img/favicon.png" type="image/png">
