--- a/about-us.html
+++ b/about-us.html
@@ -13,15 +13,15 @@
   <!-- Open Graph (Facebook, LinkedIn vb. için) -->
   <meta property="og:title" content="Hakkımızda | TrendTopik Trafik Bot & SEO Hizmetleri">
   <meta property="og:description" content="TrendTopik ile web sitenize bot trafiği, backlink tıklamaları ve SEO desteği alın. Güvenilir ve etkili çözümler.">
-  <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
-  <meta property="og:url" content="https://trendtopik.com/about-us.html">
+  <meta property="og:image" content="assets/img/og-image.jpg">
+  <meta property="og:url" content="about-us.html">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Hakkımızda | TrendTopik Trafik Bot & SEO Hizmetleri">
   <meta name="twitter:description" content="Bot trafiği ve SEO çözümleriyle web sitenizi öne çıkarın. TrendTopik hakkında detaylı bilgi burada.">
-  <meta name="twitter:image" content="https://trendtopik.com/assets/img/og-image.jpg">
+  <meta name="twitter:image" content="assets/img/og-image.jpg">
 
   <!-- Favicon -->
   <link rel="icon" href="assets/img/favicon.png" type="image/png">
