--- a/faqs.html
+++ b/faqs.html
@@ -15,7 +15,7 @@
   <!-- Open Graph (Facebook, LinkedIn vb. için) -->
   <meta property="og:title" content="Sıkça Sorulan Sorular | TrendTopik Trafik Bot & SEO Hizmetleri">
   <meta property="og:description" content="Trafik botu, SEO ve backlink hizmetleri hakkında sıkça sorulan sorulara yanıtları burada bulabilirsiniz. Hızlı çözümler ve bilgi için ziyaret edin.">
-  <meta property="og:image" content="assets/img/og-image.jpg">
+  <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
   <meta property="og:url" content="faqs.html">
   <meta property="og:type" content="website">
 
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Sıkça Sorulan Sorular | TrendTopik Trafik Bot & SEO Hizmetleri">
   <meta name="twitter:description" content="Trafik botu ve SEO hizmetleri hakkında sıkça sorulan sorulara yanıtları öğrenin. TrendTopik ile her şeyin cevabı burada.">
-  <meta name="twitter:image" content="assets/img/og-image.jpg">
+  <meta name="twitter:image" content="https://trendtopik.com/assets/img/og-image.jpg">
 
   <!-- Favicon -->
   <link rel="icon" href="assets/img/favicon.png" type="image/png">
