--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
   <!-- Open Graph (Facebook, LinkedIn vb. için) -->
   <meta property="og:title" content="TrendTopik - SEO ve Web Trafik Hizmetleri">
   <meta property="og:description" content="TrendTopik, SEO ve backlink hizmetleri ile web sitenizin görünürlüğünü artırır. Hedef kitlenize ulaşın, trafik ve sıralamanızı yükseltin.">
-  <meta property="og:image" content="assets/images/og-image.jpg">
+  <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
   <meta property="og:url" content="https://trendtopik.com">
   <meta property="og:type" content="website">
 
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="TrendTopik - SEO ve Web Trafik Hizmetleri">
   <meta name="twitter:description" content="SEO, trafik artırma ve backlink hizmetleri sunarak web sitenizin sıralamasını güçlendirin. TrendTopik ile daha fazla görünürlük kazanın.">
-  <meta name="twitter:image" content="assets/images/og-image.jpg">
+  <meta name="twitter:image" content="https://trendtopik.com/assets/img/og-image.jpg">
   <meta name="twitter:creator" content="@trendtopik">
 
   <!-- Favicon -->
