--- a/about-us.html
+++ b/about-us.html
@@ -16,6 +16,9 @@
   <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
   <meta property="og:url" content="about-us.html">
   <meta property="og:type" content="website">
+  
+  <!-- Canonical Etiket -->
+  <link rel="canonical" href="https://trendtopik.com/about-us.html" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
