--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <meta name="description" content="TrendTopik, SEO, web trafik ve backlink hizmetleri sunan bir platformdur. Sitenizin görünürlüğünü artırarak, organik trafiğinizi ve sıralamanızı güçlendirin.">
   <meta name="keywords" content="SEO hizmetleri, backlink, web trafik, dijital pazarlama, trafik artırma, SEO optimizasyonu, backlink hizmeti, organik trafik">
   <meta name="robots" content="index, follow">
+  
+        <!-- Canonical Etiket -->
+  <link rel="canonical" href="https://trendtopik.com/" />
 
   <!-- Open Graph (Facebook, LinkedIn vb. için) -->
   <meta property="og:title" content="TrendTopik - SEO ve Web Trafik Hizmetleri">
