--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,9 @@
   <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
   <meta property="og:url" content="contact.html">
   <meta property="og:type" content="website">
+  
+    <!-- Canonical Etiket -->
+  <link rel="canonical" href="https://trendtopik.com/contact.html" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
