--- a/pricing.html
+++ b/pricing.html
@@ -16,6 +16,9 @@
   <meta property="og:image" content="https://trendtopik.com/assets/img/og-image.jpg">
   <meta property="og:url" content="https://trendtopik.com">
   <meta property="og:type" content="website">
+  
+          <!-- Canonical Etiket -->
+  <link rel="canonical" href="https://trendtopik.com/pricing.html" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
